// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be rendered correctly 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container root size-18"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-radioinput"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test1
    </span>
  </label>
  <label
    className="container root size-18"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-radioinput"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test2
    </span>
  </label>
</fieldset>
`;

exports[`RadioGroup should be rendered correctly with props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container uui-disabled root size-18"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-radioinput"
      disabled={true}
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test1
    </span>
  </label>
  <label
    className="container uui-disabled root size-18"
  >
    <input
      aria-checked={false}
      checked={false}
      className="uui-radioinput"
      disabled={true}
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <span
      className="uui-input-label"
      role="label"
    >
      Test2
    </span>
  </label>
</fieldset>
`;
